--- a/src/app/components/character-setup/character-setup.component.scss
+++ b/src/app/components/character-setup/character-setup.component.scss
@@ -1,3 +1,4 @@
+#character-info,
 #character-abilities {
   display: flex;
   flex-direction: row;
@@ -36,28 +37,8 @@
   }
 }
 
-#character-info {
-  display: flex;
-  flex-direction: row;
-
-  .mat-form-field {
-    flex-grow: 1;
-    margin: 0 10px;
-
-    &:first-child {
-      margin-left: 0;
-    }
-
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-
-}
-
 @media screen and (max-width: 625px) {
-  #character-saves,
-  #character-info {
+  #character-saves {
     flex-direction: column;
 
     .column,
@@ -68,6 +49,7 @@
 }
 
 @media screen and (max-width: 420px) {
+  #character-info,
   #character-abilities {
     flex-direction: column;
 
