WIP: Tyring to get initiative with dex modifier to work

--- a/src/app/components/character-summary/character-summary.component.html
+++ b/src/app/components/character-summary/character-summary.component.html
@@ -6,20 +6,20 @@
       <div id="summary-general" class="even-count">
         <mat-list-item>
           <mat-icon matListIcon>person</mat-icon>
-          <h3 matLine>{{ characterService.character.level.title }}: {{ characterService.character.level.value }}</h3>
+          <h3 matLine>{{ characterService.character.level.title }}: {{ characterService.character.level.valueOf() }}</h3>
         </mat-list-item>
 
         <mat-list-item>
           <mat-icon matListIcon>favorite</mat-icon>
-          <h3 matLine>{{ characterService.character.hp.title }}: {{ characterService.character.hp.value }}</h3>
+          <h3 matLine>{{ characterService.character.hp.title }}: {{ characterService.character.hp.valueOf() }}</h3>
         </mat-list-item>
 
         <mat-list-item>
           <mat-icon matListIcon>directions_run</mat-icon>
-          <h3 matLine>Initiative Bonus: {{ characterService.character.initiative | positiveDecorator }}</h3>
+          <h3 matLine>{{ characterService.character.initiative.title }}: {{ characterService.character.initiative.valueOf() | positiveDecorator }}</h3>
         </mat-list-item>
 
-        <mat-list-item matTooltip="AC: 10
+        <mat-list-item matTooltip="AC: {{ characterService.character.ac.base }}
           + 0 Armor
           + 0 Shield
           + {{ characterService.character.dexAbility.base10Mod }} Dex
@@ -30,10 +30,10 @@
           ">
           <mat-icon matListIcon>security</mat-icon>
           <h3 matLine>
-            Armor Class: {{ characterService.character.ac }}
+            {{ characterService.character.ac.title }}: {{ characterService.character.ac.valueOf() }}
           </h3>
-          <p matLine>Touch: {{ characterService.character.touchAc }}</p>
-          <p matLine>Flat Footed: {{ characterService.character.flatFootedAc }}</p>
+          <p matLine>{{ characterService.character.touchAc.shortName }}: {{ characterService.character.touchAc.valueOf() }}</p>
+          <p matLine>{{ characterService.character.flatFootedAc.shortName }}: {{ characterService.character.flatFootedAc.valueOf() }}</p>
         </mat-list-item>
       </div>
 
@@ -42,32 +42,32 @@
       <h2 matSubheader>Abilities</h2>
       <div id="summary-abilities" class="even-count">
         <mat-list-item>
-          <h3 matLine>{{ characterService.character.strAbility.title }}: {{ characterService.character.strAbility.value }}</h3>
+          <h3 matLine>{{ characterService.character.strAbility.title }}: {{ characterService.character.strAbility.valueOf() }}</h3>
           <div class="modifier-large">{{ characterService.character.strAbility.base10Mod | positiveDecorator }}</div>
         </mat-list-item>
 
         <mat-list-item>
-          <h3 matLine>{{ characterService.character.dexAbility.title }}: {{ characterService.character.dexAbility.value }}</h3>
+          <h3 matLine>{{ characterService.character.dexAbility.title }}: {{ characterService.character.dexAbility.valueOf() }}</h3>
           <div class="modifier-large">{{ characterService.character.dexAbility.base10Mod | positiveDecorator }}</div>
         </mat-list-item>
 
         <mat-list-item>
-          <h3 matLine>{{ characterService.character.conAbility.title }}: {{ characterService.character.conAbility.value }}</h3>
+          <h3 matLine>{{ characterService.character.conAbility.title }}: {{ characterService.character.conAbility.valueOf() }}</h3>
           <div class="modifier-large">{{ characterService.character.conAbility.base10Mod | positiveDecorator }}</div>
         </mat-list-item>
 
         <mat-list-item>
-          <h3 matLine>{{ characterService.character.intAbility.title }}: {{ characterService.character.intAbility.value }}</h3>
+          <h3 matLine>{{ characterService.character.intAbility.title }}: {{ characterService.character.intAbility.valueOf() }}</h3>
           <div class="modifier-large">{{ characterService.character.intAbility.base10Mod | positiveDecorator }}</div>
         </mat-list-item>
 
         <mat-list-item>
-          <h3 matLine>{{ characterService.character.wisAbility.title }}: {{ characterService.character.wisAbility.value }}</h3>
+          <h3 matLine>{{ characterService.character.wisAbility.title }}: {{ characterService.character.wisAbility.valueOf() }}</h3>
           <div class="modifier-large">{{ characterService.character.wisAbility.base10Mod | positiveDecorator }}</div>
         </mat-list-item>
 
         <mat-list-item>
-          <h3 matLine>{{ characterService.character.chaAbility.title }}: {{ characterService.character.chaAbility.value }}</h3>
+          <h3 matLine>{{ characterService.character.chaAbility.title }}: {{ characterService.character.chaAbility.valueOf() }}</h3>
           <div class="modifier-large">{{ characterService.character.chaAbility.base10Mod | positiveDecorator }}</div>
         </mat-list-item>
       </div>
